added skeleton for a button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Drum kit</title>
 </head>
 <body>
-    
+    <div class="wrap-container">
+        <div>
+            <p>Q</p>
+            <span></span>
+        </div>
+    </div>
 </body>
 </html>
