linked css and js files with index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drum kit</title>
+    <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
     <div class="wrap-container">
@@ -13,5 +14,6 @@
             <span></span>
         </div>
     </div>
+    <script src="src/index.js"></script>
 </body>
 </html>
