button skeleton ready

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-    <div class="wrap-container">
-        <div>
-            <p>Q</p>
-            <span></span>
+    <div class="c-wrap-container">
+        <div class="c-btn-container">
+            <p class="o-btn-name">Q</p>
+            <span class="o-music-name">boom</span>
         </div>
     </div>
-    <script src="src/index.js"></script>
+    <script src="src/scripts.js"></script>
 </body>
 </html>
