--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="c-wrap-container">
         <div class="c-btn-container">
-            <p class="o-btn-name">Q</p>
-            <span class="o-music-name">boom</span>
+            <p class="o-btn-name" id="btn-name"></p>
+            <span class="o-music-name"></span>
         </div>
     </div>
     <script src="src/scripts.js"></script>
