--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <span class="o-music-name"></span>
         </div>
     </div>
+    <audio id="boom-audio" src="./src/sounds/boom.wav" autostart="false"></audio>
     <script src="src/scripts.js"></script>
 </body>
 </html>
