added support for W btn

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
     </div>
     <audio id="boom-audio" src="./src/sounds/boom.wav" autostart="false"></audio>
+    <audio id="clap-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <script src="src/scripts.js"></script>
 </body>
 </html>
