added new btn support. also shows the key code of the btn

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="c-wrap-container">
         <div class="c-btn-container">
             <p class="o-btn-name" id="btn-name"></p>
+            <p class="o-btn-code" id="btn-code"></p>
             <span class="o-music-name"></span>
         </div>
     </div>
