--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <audio id="boom-audio" src="./src/sounds/boom.wav" autostart="false"></audio>
     <audio id="clap-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="hihat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <script src="src/scripts.js"></script>
 </body>
 </html>
