added support for the A btn and comments

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <audio id="boom-audio" src="./src/sounds/boom.wav" autostart="false"></audio>
     <audio id="clap-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <audio id="hihat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="kick-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <script src="src/scripts.js"></script>
 </body>
 </html>
