added support for the S btn

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <audio id="clap-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <audio id="hihat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <audio id="kick-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="openhat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <script src="src/scripts.js"></script>
 </body>
 </html>
