re-assign buttons, sounds added for 'Q,W,E,R,T,Y,U,I,O' buttons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <audio id="hihat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <audio id="kick-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <audio id="openhat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="ride-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="share-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="tink-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="tom-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
     <script src="src/scripts.js"></script>
 </body>
 </html>
