refactored audio names

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </div>
     <audio id="boom-audio" src="./src/sounds/boom.wav" autostart="false"></audio>
     <audio id="clap-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
-    <audio id="hihat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
-    <audio id="kick-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
-    <audio id="openhat-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
-    <audio id="ride-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
-    <audio id="share-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
-    <audio id="tink-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
-    <audio id="tom-audio" src="./src/sounds/clap.wav" autostart="false"></audio>
+    <audio id="hihat-audio" src="./src/sounds/hihat.wav" autostart="false"></audio>
+    <audio id="kick-audio" src="./src/sounds/kick.wav" autostart="false"></audio>
+    <audio id="openhat-audio" src="./src/sounds/openhat.wav" autostart="false"></audio>
+    <audio id="ride-audio" src="./src/sounds/ride.wav" autostart="false"></audio>
+    <audio id="snare-audio" src="./src/sounds/snare.wav" autostart="false"></audio>
+    <audio id="tink-audio" src="./src/sounds/tink.wav" autostart="false"></audio>
+    <audio id="tom-audio" src="./src/sounds/tom.wav" autostart="false"></audio>
     <script src="src/scripts.js"></script>
 </body>
 </html>
