added styles to center the button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="c-btn-container">
             <p class="o-btn-name" id="btn-name"></p>
             <p class="o-btn-code" id="btn-code"></p>
-            <span class="o-music-name"></span>
+            <span class="o-music-name" id="audio-name"></span>
         </div>
     </div>
     <audio id="boom-audio" src="./src/sounds/boom.wav" autostart="false"></audio>
