--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="c-wrap-container">
         <div class="c-btn-container">
-            <p class="o-btn-name" id="btn-name"></p>
-            <p class="o-btn-code" id="btn-code"></p>
+            <span class="o-btn-name" id="btn-name"></span>
+            <span class="o-btn-code" id="btn-code"></span>
             <span class="o-music-name" id="audio-name"></span>
         </div>
     </div>
