add functionality to remove display in 1.5 sec

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="c-wrap-container">
-        <div class="c-btn-container">
+        <div class="c-btn-container" id="btn-container">
             <span class="o-btn-name" id="btn-name"></span>
             <span class="o-btn-code" id="btn-code"></span>
             <span class="o-music-name" id="audio-name"></span>
